# QLink

./: .gitignore  QLink.sln
QLink/: CMakeLists.txt  QLink.aps  QLink.vcxproj  QLink.vcxproj.filters  block.cpp  block.h  cpp.hint  duomode.cpp  duomode.h  duomode.ui  images.qrc  item.cpp  item.h  load.cpp  load.h  main.cpp  menu.cpp  menu.h  menu.ui  music.qrc  pausemenu.cpp  pausemenu.h  pausemenu.ui  player.cpp  player.h  resource1.h  simplemode.cpp  simplemode.h  simplemode.ui  simpletest.cpp  simpletest.h
QLink/x64/Debug/: QLink.exe.recipe  vc143.idb
QLink/x64/Debug/QLink.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QLink.lastbuildstate  QLink.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
QLink/x64/Debug/qt/moc/: moc_pausemenu.cpp  moc_simplemode.cpp
QLink/x64/Debug/qt/qmake/: qtvars.pro  qtvars.vcxproj  qtvars.xml
QLink/x64/Debug/qt/uic/: ui_duomode.h  ui_menu.h  ui_simplemode.h
QLink/x64/Release/: QLink.exe.recipe  QLink.ipdb
QLink/x64/Release/QLink.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QLink.lastbuildstate  QLink.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QLink/x64/Release/qt/: qtvars.xml
QLink/x64/Release/qt/moc/: moc_block.cpp  moc_duomode.cpp  moc_menu.cpp  moc_player.cpp  (+1 more)
(+5 files in other folders)
